<resources>
    <string name="app_name">مهر کالا</string>
    <string name="username">نام کاربری و یا شماره تلفن</string>
    <string name="phone_number">شماره تماس</string>
    <string name="name">نام و نام خانوادگی</string>
    <string name="password">رمز عبور</string>
    <string name="login"> ورود </string>
    <!-- nor common strings-->
    <string name="create_new_account">ایجاد حساب کاربری</string>
    <string name="account">حساب کاربری</string>
    <string name="shopping_basket">سبد خرید</string>
    <string name="top_products">محصولات برتر</string>
    <string name="top_sale">فروش ویژه</string>
    <string name="item_count">تعداد محصول</string>
    <string name="all_products">دسته بندی محصولات</string>
    <string name="items_not_found">نتیجه ای برای جستجوی شما یافت نشد</string>
    <string name="items_not_found_basket">شما محصولی برای خرید ندارید.</string>
    <string name="internet_error">خطای فنی در ارتباط با سرور رخ داده است!</string>
    <string name="parandco">شرکت پارند</string>

    <!--    STATES ARRAY -->
    <string-array name="states">
        <item>"آذربایجان شرقی" </item>
        <item>"آذربایجان غربی"</item>
        <item>"اردبیل"</item>
        <item>"اصفهان"</item>
        <item>"البرز"</item>
        <item>"ایلام"</item>
        <item>"بوشهر"</item>
        <item>"تهران"</item>
        <item>"چهارمحال وبختیاری"</item>
        <item>"خراسان جنوبی"</item>
        <item>"خراسان رضوی"</item>
        <item>"خراسان شمالی"</item>
        <item>"خوزستان"</item>
        <item>"زنجان"</item>
        <item>"سمنان"</item>
        <item>"سیستان وبلوچستان"</item>
        <item>"فارس"</item>
        <item>"قزوین"</item>
        <item>"قم"</item>
        <item>"کردستان"</item>
        <item>"کرمان"</item>
        <item>"کرمانشاه"</item>
        <item>"کهگیلویه وبویراحمد"</item>
        <item>"گلستان"</item>
        <item>"گیلان"</item>
        <item>"لرستان"</item>
        <item>"مازندران"</item>
        <item>"مرکزی"</item>
        <item>"هرمزگان"</item>
        <item>"همدان"</item>
        <item>"یزد"</item>
    </string-array>
    <string-array name="packet_types">
        <item>"سفارشی"</item>
        <item>"پیشتاز"</item>
    </string-array>

    <string name="about_parand">شرکت مهندسی پارند در سال 1389 تاسیس شد و از سال 1391 کار خود را در حوزه آموزشی تخصصی در زمینه های رباتیک ، کامپیوتر ، مکانیک ، الکترنیک آغاز کرد.

در این مرحله فعالیت شرکت با مراکز آموزشی مدارس ، مهد کودک ها ، پارک علم و فناوری ، فنی و حرفه ای و چندین مرکز خصوصی و دولتی در زمینه ه
سپس در سال 93 با اضافه شدن اعضای جدید تصمیم به گسترش حوزه فعالیت های شرکت گرفته شد که در این بین حوزه روانشناسی و اجتماعی بصورت تخصصی تر و با نگاهی نو و پر رنگتر از سایر حوزه ها مورد مطالعه و پژوهش علمی قرار گرفت و و مشاور امک ادامه میدهیم.</string>

    <string name="about_us">درباره ما</string>
    <string name="password_forget">رمز عبور را فراموش کرده اید ؟</string>
    <string name="reset_password">بازیابی رمزعبور</string>
    <string name="reset_password_dont_worry">رمز عبور خود را فراموش کردید، نگران نباشید.</string>
    <string name="reset_password_enter_email">ایمیل خود را وارد کنید</string>

</resources>
