<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.splashScreen.login.LoginFragment"
    android:layoutDirection="ltr"
    android:fitsSystemWindows="true"
    >


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_background"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="-120dp"
            android:layout_marginEnd="-120dp"
            android:alpha="0.2"
            android:src="@drawable/circle_drawable" />

        <ImageView
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:alpha=".2"
            android:rotation="-30"
            android:src="@drawable/rectangle_drawable" />

        <TextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_alignParentEnd="true"
            android:padding="4dp"
            android:text="ورود به                                   حساب کاربری"
            android:textSize="50sp"
            android:fontFamily="@font/font_one"
            android:textColor="@color/white"
            android:lineSpacingExtra="-10dp"
            />

    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/one_corner_rectangle_drawable"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <TextView
            android:id="@+id/ac_login_txt_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:fontFamily="@font/font_one"
            android:gravity="end"
            android:text="@string/username"
            android:textColor="@color/overlay_dark_80"
            android:textDirection="ltr"
            android:textSize="@dimen/register_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.24" />

        <EditText
            android:id="@+id/ac_login_edt_username"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/login_form_edit_txt_background"
            android:inputType="textAutoComplete"
            android:maxLength="20"
            android:maxLines="1"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textAlignment="viewEnd"
            android:textColor="@color/overlay_dark_80"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            app:layout_constraintEnd_toEndOf="@+id/ac_login_txt_username"
            app:layout_constraintStart_toStartOf="@+id/ac_login_txt_username"
            app:layout_constraintTop_toBottomOf="@id/ac_login_txt_username" />

        <TextView
            android:id="@+id/ac_login_txt_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/font_one"
            android:gravity="end"
            android:text="@string/password"
            android:textColor="@color/overlay_dark_80"
            android:textDirection="ltr"
            android:textSize="@dimen/register_text_size"
            app:layout_constraintEnd_toEndOf="@id/ac_login_txt_username"
            app:layout_constraintStart_toStartOf="@+id/ac_login_txt_username"
            app:layout_constraintTop_toBottomOf="@id/ac_login_edt_username" />

        <EditText
            android:id="@+id/ac_login_edt_password"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/login_form_edit_txt_background"
            android:inputType="numberDecimal"
            android:maxLength="11"
            android:maxLines="1"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColor="@color/overlay_dark_80"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            app:layout_constraintEnd_toEndOf="@id/ac_login_txt_username"
            app:layout_constraintStart_toStartOf="@+id/ac_login_txt_username"
            app:layout_constraintTop_toBottomOf="@id/ac_login_txt_password" />

        <com.rey.material.widget.Button
            android:id="@+id/ac_login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/login_btn_background"
            android:fontFamily="@font/iran_sans_bold"
            android:paddingStart="40dp"
            android:paddingTop="4dp"
            android:paddingEnd="40dp"
            android:paddingBottom="6dp"
            android:text="@string/login"
            android:textColor="@color/overlay_dark_80"
            android:textSize="@dimen/register_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fra_login_reset_pass"
            app:rd_cornerRadius="20dp"
            app:rd_enable="true"
            app:rd_maskType="rectangle"
            app:rd_maxRippleRadius="24dp"
            app:rd_rippleAnimDuration="700"
            app:rd_rippleColor="#aaaa"
            app:rd_rippleType="wave" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/ac_login_show_status"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginTop="25dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ac_login_edt_password" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/iran_sans_light"
            android:gravity="end"
            android:text="@string/password_forget"
            android:textColor="@color/black"
            android:textDirection="ltr"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/fra_login_reset_pass"
            app:layout_constraintEnd_toEndOf="@+id/ac_login_edt_password"
            app:layout_constraintTop_toTopOf="@+id/fra_login_reset_pass" />

        <TextView
            android:id="@+id/fra_login_reset_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/iran_sans_bold"
            android:gravity="end"
            android:text="@string/reset_password"
            android:textColor="@color/black"
            android:textDirection="ltr"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/ac_login_edt_password" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>