<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="onClick"
            type="com.example.mehrkalacoroutine.ui.utils.OnItemClickHandler" />
    </data>
    <androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.mainPage.MainPageFragment"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <androidx.cardview.widget.CardView
                android:id="@+id/fra_main_card_slider"
                app:cardCornerRadius="7dp"
                android:elevation="2dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="74dp"
                android:layout_marginStart="9dp"
                android:layout_marginEnd="9dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                >
                <com.smarteist.autoimageslider.SliderView
                    android:id="@+id/fra_main_image_slider"
                    android:layout_width="match_parent"
                    android:layout_height="184dp"
                    app:sliderIndicatorRadius="2dp"
                    app:sliderIndicatorSelectedColor="@color/overlay_dark_80"
                    app:sliderIndicatorUnselectedColor="@color/red_400"
                    app:sliderCircularHandlerEnabled="true"
                    app:sliderStartAutoCycle="true"
                    app:sliderScrollTimeInSec="2"
                    app:sliderIndicatorGravity="bottom|start"
                    />
            </androidx.cardview.widget.CardView>
            <com.arlib.floatingsearchview.FloatingSearchView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="5dp"
                app:floatingSearch_searchBarMarginLeft="10dp"
                app:floatingSearch_searchBarMarginTop="10dp"
                app:floatingSearch_searchBarMarginRight="10dp"
                app:floatingSearch_searchHint="   جست و جو ....."
                android:fontFamily="@font/text_font"
                android:textColor="@color/overlay_dark_80"
                app:floatingSearch_hintTextColor="@color/overlay_dark_70"
                app:floatingSearch_suggestionsListAnimDuration="250"
                app:floatingSearch_showSearchKey="true"
                app:floatingSearch_leftActionMode="showSearch"
                app:floatingSearch_close_search_on_keyboard_dismiss="true"
                app:floatingSearch_dismissOnOutsideTouch="true"
                app:floatingSearch_dimBackground="false"
                app:layout_constraintTop_toTopOf="parent"
                />
            <FrameLayout
                android:id="@+id/fra_main_search"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:onClick="@{onClick::onClick}"
                android:elevation="5dp"
                app:layout_constraintTop_toTopOf="parent"
                />
            <LinearLayout
                android:id="@+id/fra_main_items"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                app:layout_constraintTop_toBottomOf="@id/fra_main_card_slider"
                >
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    >
                    <ImageView
                        android:id="@+id/fra_main_all_items"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center"
                        android:background="@drawable/all_products"
                        android:onClick="@{onClick::onClick}"
                        />
                    <TextView
                        android:id="@+id/fra_main_all_items_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/all_products"
                        android:fontFamily="@font/app_font_bold"
                        android:textColor="@color/overlay_dark_80"
                        android:textSize="16dp"
                        android:onClick="@{onClick::onClick}"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/fra_main_basket"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center"
                        android:background="@drawable/shop_basket"
                        android:onClick="@{onClick::onClick}"
                        />
                    <TextView
                        android:id="@+id/fra_main_basket_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/shopping_basket"
                        android:fontFamily="@font/app_font_bold"
                        android:textColor="@color/overlay_dark_80"
                        android:textSize="16dp"
                        android:onClick="@{onClick::onClick}"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/fra_main_account"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center"
                        android:background="@drawable/account"
                        android:onClick="@{onClick::onClick}"
                        />
                    <TextView
                        android:id="@+id/fra_main_account_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/account"
                        android:fontFamily="@font/app_font_bold"
                        android:textColor="@color/overlay_dark_80"
                        android:textSize="16dp"
                        android:onClick="@{onClick::onClick}"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/fra_main_aboutUs"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center"
                        android:background="@drawable/ic_about_us"
                        android:onClick="@{onClick::onClick}"
                        />
                    <TextView
                        android:id="@+id/fra_main_aboutUs_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/about_us"
                        android:fontFamily="@font/app_font_bold"
                        android:textColor="@color/overlay_dark_80"
                        android:textSize="16dp"
                        android:onClick="@{onClick::onClick}"
                        />
                </LinearLayout>
            </LinearLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/fra_main_category_rv"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/fra_main_items"
                />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/fra_main_top_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/fra_main_category_rv"
                />
            <TextView
                android:id="@+id/fra_main_offer_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="محصولات پیشنهادی"
                android:textColor="@color/overlay_dark_70"
                android:textSize="26dp"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/iran_sans_bold"
                app:layout_constraintTop_toBottomOf="@id/fra_main_top_rv"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />
            <View
                android:layout_width="0dp"
                android:layout_height="3dp"
                android:background="@drawable/view_gradient"
                app:layout_constraintTop_toBottomOf="@id/fra_main_offer_txt"
                app:layout_constraintStart_toStartOf="@id/fra_main_offer_txt"
                app:layout_constraintEnd_toEndOf="@id/fra_main_offer_txt"
                />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/fra_main_offers_rv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="2"
                tools:itemCount="4"
                android:layout_marginTop="7dp"
                app:layout_constraintTop_toBottomOf="@id/fra_main_offer_txt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/fra_main_top_sale_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="27dp"
                app:layout_constraintTop_toBottomOf="@id/fra_main_offers_rv"
                app:layout_constraintBottom_toBottomOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>