<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red_50"
    tools:context=".ui.fragment.splashScreen.singup.SignupFragment"
    android:fillViewport="true"
    android:fitsSystemWindows="true">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/pink_A400"
        >
        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:src="@drawable/circle_drawable"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="-120dp"
            android:layout_marginEnd="-120dp"
            android:alpha="0.2"
            />
        <ImageView
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:rotation="-30"
            android:alpha=".2"
            android:src="@drawable/rectangle_drawable"
            />
        <TextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_alignParentEnd="true"
            android:padding="4dp"
            android:text="ایجاد                                   حساب کاربری"
            android:textSize="50sp"
            android:fontFamily="@font/font_one"
            android:textColor="@color/overlay_dark_80"
            android:lineSpacingExtra="-10dp"
            />
        <TextView
            android:id="@+id/fra_signup_go_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/header"
            android:layout_toStartOf="@id/text"
            android:layout_marginEnd="9dp"
            android:layout_marginTop="-6dp"
            android:text="وارد شوید"
            android:fontFamily="@font/app_font_bold"
            android:textSize="21dp"
            android:textColor="@color/white"
            />
        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/header"
            android:layout_marginEnd="16dp"
            android:layout_alignParentEnd="true"
            android:text="قبلا ثبت نام کرده اید ؟"
            android:fontFamily="@font/iran_sans_medium"
            android:textSize="17dp"
            android:textColor="@color/white"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="13dp"
            android:layout_below="@id/text"
            android:layout_alignParentBottom="true"
            android:background="@drawable/one_corner_rectangle_drawable"
            >
            <!--                username  -->
            <LinearLayout
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="44dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <TextView
                    android:layout_gravity="center"
                    android:text="@string/username"
                    android:fontFamily="@font/font_one"
                    android:textColor="@color/overlay_dark_80"
                    android:textSize="19dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"/>
                <ImageView
                    android:layout_width="29dp"
                    android:layout_height="29dp"
                    app:srcCompat="@drawable/ic_person_black_24dp"/>

            </LinearLayout>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                android:id="@+id/username_layout"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:boxBackgroundMode="filled"
                app:boxCornerRadiusBottomStart="6dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/username">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fra_signup_username"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:inputType="text"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <!--            phoneNumber  -->
            <LinearLayout
                android:id="@+id/phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="9dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/username_layout">
                <TextView
                    android:layout_gravity="center"
                    android:text="@string/phone_number"
                    android:fontFamily="@font/font_one"
                    android:textColor="@color/overlay_dark_80"
                    android:textSize="19dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"/>
                <ImageView
                    android:layout_width="29dp"
                    android:layout_height="29dp"
                    app:srcCompat="@drawable/ic_phone"/>

            </LinearLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone_number_layout"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:boxCornerRadiusBottomStart="6dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phone_number">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fra_signup_phone"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:inputType="numberDecimal"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <!--            password  -->
            <LinearLayout
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="9dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/phone_number_layout">
                <TextView
                    android:layout_gravity="center"
                    android:text="@string/password"
                    android:fontFamily="@font/font_one"
                    android:textColor="@color/overlay_dark_80"
                    android:textSize="19dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"/>
                <ImageView
                    android:layout_width="29dp"
                    android:layout_height="29dp"
                    app:srcCompat="@drawable/ic_password"/>

            </LinearLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_layout"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/black"
                app:layout_constraintTop_toBottomOf="@id/password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fra_signup_password"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:inputType="textPassword"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/fra_signup_login"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_margin="15dp"
                android:background="@drawable/ic_arrow_left_black"
                android:rotation="180"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>



    </RelativeLayout>


</androidx.core.widget.NestedScrollView>